--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "dunia-kopi-backend",
   "version": "1.0.0",
-  "description": "Backend service for Dunia Kopi payment processing",
+  "description": "Backend for Dunia Kopi App",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "midtrans-client": "^1.3.1"
   }
 }
+
