--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,18 @@
 {
   "version": 2,
+  "env": {
+    "RAJAONGKIR_API_KEY": "@rajaongkir_api_key"
+  },
   "builds": [
     {
-      "src": "index.js",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
     }
   ]
 }
